--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <br>
                                 content of a page when looking at its layout.
                             </p>
-                            <div class="btn bg-primary text-white">Get Started</div>
+                            <div class="btn bg-info text-white fw-bold">Get Started</div>
 
                         </div>
                     </div>
@@ -122,18 +122,171 @@
     </header>
     <main>
         <!-- courses start -->
-        <section class="container text-center mt-5" id="Courses">
-            <h2>Discover Our Popular
-                <br>
-                Courses
-            </h2>
-            <p>It is a long established fact that a reader will be distracted by the readable
-                <br>
-                content of a page when looking at its layout.
-            </p>
+        <section class="container mt-5" id="Courses">
+            <div class="text-center">
+                <h2 class="fw-bold">Discover Our Popular
+                    <br>
+                    Courses
+                </h2>
+                <p class="text-secondary">It is a long established fact that a reader will be distracted by the readable
+                    <br>
+                    content of a page when looking at its layout.
+                </p>
+
+            </div>
+            <div class="row row-cols-1 row-cols-md-2 g-4 mt-5">
+                <!-- course-1 -->
+                <div class="col">
+                    <div class="card d-flex flex-row">
+                        <div class="w-25">
+                            <img src="images/course/course-1.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body w-75">
+                            <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                            <p class="card-text text-secondary">The fundamental principles of design are:
+                                Emphasis,Balance and Alignment.
+                                <br>
+                                <span class="text-primary fw-bold">Price: 20$</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- course-2 -->
+                <div class="col">
+                    <div class="card d-flex flex-row">
+                        <div class="w-25">
+                            <img src="images/course/course-2.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body w-75">
+                            <h5 class="card-title">Javascript Basic to advanced</h5>
+                            <p class="card-text text-secondary">JavaScript is a programming language that adds
+                                interactivity to your website.
+                                <br>
+                                <span class="text-primary fw-bold">Price: 20$</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- course-3 -->
+                <div class="col">
+                    <div class="card d-flex flex-row">
+                        <div class="w-25">
+                            <img src="images/course/course-3.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body w-75">
+                            <h5 class="card-title">Fullstack Web Development</h5>
+                            <p class="card-text text-secondary">A full stack web developer is a person who can develop
+                                client and software.
+                                <br>
+                                <span class="text-primary fw-bold">Price: 20$</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- course-4 -->
+                <div class="col">
+                    <div class="card d-flex flex-row">
+                        <div class="w-25">
+                            <img src="images/course/course-4.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body w-75">
+                            <h5 class="card-title">Digital Marketing</h5>
+                            <p class="card-text text-secondary">Digital marketing, also known as online marketing to
+                                advertising through digital.
+                                <br>
+                                <span class="text-primary fw-bold">Price: 20$</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- course-5 -->
+                <div class="col">
+                    <div class="card d-flex flex-row">
+                        <div class="w-25">
+                            <img src="images/course/course-5.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body w-75">
+                            <h5 class="card-title">Photography Basic Rules</h5>
+                            <p class="card-text text-secondary">To fill the frame, your subject should occupy a
+                                significant portion of image.
+                                <br>
+                                <span class="text-primary fw-bold">Price: 20$</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- course-6 -->
+                <div class="col">
+                    <div class="card d-flex flex-row">
+                        <div class="w-25">
+                            <img src="images/course/course-6.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body w-75">
+                            <h5 class="card-title">Motion Graphics</h5>
+                            <p class="card-text text-secondary">it's also called Motion
+                                Design,it's relationship between movement and design.
+                                <br>
+                                <span class="text-primary fw-bold">Price: 20$</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
         <!-- courses end -->
+        <!-- courses option -->
+        <div class="text-center mt-5">
+            <button class="btn btn-info text-white fw-bold p-3">See More Courses</button>
+        </div>
+        <!-- Explore The learning Institute -->
+        <section class="container mt-5">
+            <div class="card mb-3 flex flex-row align-items-center">
+                <div class="w-50">
+                    <img src="images/working.png" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body w-50 ms-5">
+                    <h1 class="card-title fw-bold">Explore The learning <br>Institute</h1>
+                    <p class="card-text text-secondary">The Learning Policy Institute conducts and communicates
+                        independent,
+                        high-quality research to improve education policy and practice. Working with policymakers,
+                        researchers, educators, community groups, and others, the Institute seeks to advance
+                        evidence-based policies that support empowering and equitable learning for each and every
+                        child.
+                    </p>
+                    <p class="text-secondary">Education aims to give every student opportunities to learn and
+                        thrive,
+                        but the outdated design
+                        of schools contributes to widening inequalities.</p>
+                    <div class="d-flex flex-row">
+                        <div class="ms-2">
+                            <h1 class="fw-bold fs-1">3.2K+</h1>
+                            <p class="text-secondary">Online Course</p>
+                        </div>
+                        <div class="ms-5">
+                            <h1 class="fw-bold fs-1">600K+</h1>
+                            <p class="text-secondary">Expert member</p>
+                        </div>
+                        <div class="ms-5">
+                            <h1 class="fw-bold fs-1">1K+</h1>
+                            <p class="text-secondary">Rating & Review</p>
+                        </div>
+                    </div>
+                    <div class="btn btn-info p-3 text-white fw-bold">Read More</div>
+                </div>
+            </div>
+        </section>
+        <!-- joining section -->
+        <section class="container mt-5">
+            <div class="card d-flex flex-row bg-info">
+                <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="btn "></div>
+            </div>
+        </section>
+
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
