--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -278,13 +279,76 @@
         </section>
         <!-- joining section -->
         <section class="container mt-5">
-            <div class="card d-flex flex-row bg-info">
-                <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <div class="card">
+                <div class="card-body bg-info d-flex flex-row justify-content-between p-5">
+                    <div>
+                        <h1 class="card-title text-white">Want to Expolre?</h1>
+                        <p class="card-text text-white">If you want to develope your skill this is the right place to
+                            get your resources.
+                            <br> and develope your skill for the upcoming challenges.
+                        </p>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-light text-info fw-bold p-2 mt-4">Register Now</a>
+
+                    </div>
                 </div>
-                <div class="btn "></div>
             </div>
+        </section>
+        <!-- about successful student -->
+        <section class="container mt-5">
+            <div>
+                <h1>Meet Our Successful
+                    <br>
+                    Students
+                </h1>
+                <p class="text-secondary">For last five years we have produced a great many industry leaders
+                    <br> who happened to be proud students
+                    of our esteem institution.
+                </p>
+            </div>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+                <div class="col">
+                    <div class="card">
+                        <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Awlad Hossain</h5>
+                            <p class="card-text text-secondary">UIUX Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Jannatul Islam</h5>
+                            <p class="card-text text-secondary">Motion Design</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Imran Hossain</h5>
+                            <p class="card-text text-secondary">Graphic Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nishi Akter</h5>
+                            <p class="card-text text-secondary">Web Developer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container mt-3 text-center">
+                <button class="btn btn-info text-white fw-bold ">View All</button>
+            </div>
+
         </section>
 
 
