--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Tele School</title>
+    <!-- bootstrap css link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- bootstrapicon link -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <!-- stylesheet link -->
+    <link rel="stylesheet" href="styles/style.css">
 
 </head>
 
@@ -24,22 +29,22 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#Home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Courses</a>
+                            <a class="nav-link" href="#Courses">Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Deals</a>
+                            <a class="nav-link" href="#Deals">Deals</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">success</a>
+                            <a class="nav-link" href="#Success">Success</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Register</a>
+                            <a class="nav-link" href="#Register">Register</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -56,9 +61,9 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active border rounded pt-5">
                         <div>
-                            <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                            <img src="images/cover/cover-1.png" class="d-block w-100 h-100" alt="...">
                         </div>
-                        <div class="carousel-caption d-none d-md-block text-white">
+                        <div class="carousel-caption text-white">
                             <h1>Get Started Digital
                                 <br>
                                 Learning
@@ -68,14 +73,13 @@
                                 content of a page when looking at its layout.
                             </p>
                             <div class="btn bg-info text-white fw-bold">Get Started</div>
-
                         </div>
                     </div>
                     <div class="carousel-item active border rounded pt-5">
                         <div>
-                            <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                            <img src="images/cover/cover-2.jpg" class="d-block w-100 h-100" alt="...">
                         </div>
-                        <div class="carousel-caption d-none d-md-block text-white">
+                        <div class="carousel-caption  text-white">
                             <h1>Get Started Digital
                                 <br>
                                 Learning
@@ -90,9 +94,9 @@
                     </div>
                     <div class="carousel-item active border rounded pt-5">
                         <div>
-                            <img src="images/cover/cover-3.jpg" class=" d-block w-100" alt="...">
+                            <img src="images/cover/cover-3.jpg" class=" d-block w-100 h-100" alt="...">
                         </div>
-                        <div class="carousel-caption d-none d-md-block text-white">
+                        <div class="carousel-caption text-white">
                             <h1>Get Started Digital
                                 <br>
                                 Learning
@@ -135,7 +139,7 @@
                 </p>
 
             </div>
-            <div class="row row-cols-1 row-cols-md-2 g-4 mt-5">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4 mt-5">
                 <!-- course-1 -->
                 <div class="col">
                     <div class="card d-flex flex-row">
@@ -241,7 +245,7 @@
             <button class="btn btn-info text-white fw-bold p-3">See More Courses</button>
         </div>
         <!-- Explore The learning Institute -->
-        <section class="container mt-5">
+        <section class="container mt-5" id="Deals">
             <div class="card mb-3 flex flex-row align-items-center">
                 <div class="w-50">
                     <img src="images/working.png" class="card-img-top" alt="...">
@@ -277,26 +281,9 @@
                 </div>
             </div>
         </section>
-        <!-- joining section -->
-        <section class="container mt-5">
-            <div class="card">
-                <div class="card-body bg-info d-flex flex-row justify-content-between p-5">
-                    <div>
-                        <h1 class="card-title text-white">Want to Expolre?</h1>
-                        <p class="card-text text-white">If you want to develope your skill this is the right place to
-                            get your resources.
-                            <br> and develope your skill for the upcoming challenges.
-                        </p>
-                    </div>
-                    <div>
-                        <a href="#" class="btn btn-light text-info fw-bold p-2 mt-4">Register Now</a>
 
-                    </div>
-                </div>
-            </div>
-        </section>
         <!-- about successful student -->
-        <section class="container mt-5">
+        <section class="container mt-5" id="Success">
             <div>
                 <h1>Meet Our Successful
                     <br>
@@ -348,11 +335,177 @@
             <div class="container mt-3 text-center">
                 <button class="btn btn-info text-white fw-bold ">View All</button>
             </div>
+        </section>
+        <!-- Frequently Asked Questions -->
+        <section class="container mt-5" id="About">
+            <div class="text-center">
+                <h1>Frequently Asked Questions</h1>
+                <p class="text-secondary">There are some common questions with answer about programmimg <br>language
+                    that frequently asked.</p>
+            </div>
+            <!-- question-1 -->
+            <div class="accordion m-5 p-5" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            What are the difference between flex box and grid?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body text-secondary">
+                            Grid is made for two-dimensional layout while Flexbox is for one. This means Flexbox can
+                            work on either row or columns at a time, but Grids can work on both. Flexbox, gives you more
+                            flexibility while working on either element (row or column). HTML markup and CSS will be
+                            easy to manage in this type of scenario.
+                        </div>
+                    </div>
+                </div>
+                <!-- question-2 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            What are the difference between bootstrap and tailwind?
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body text-secondary">
+                            Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a
+                            definite UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with more
+                            flexibility and uniqueness. Sites created using Bootstrap follow the generic pattern that
+                            makes them look identical.
+                        </div>
+                    </div>
+                </div>
+                <!-- question-3 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            What is CSS box model?
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body text-secondary">
+                            When laying out a document, the browser's rendering engine represents each element as a
+                            rectangular box according to the standard CSS basic box model. CSS determines the size,
+                            position, and properties (color, background, border size, etc.) of these boxes.
+                        </div>
+                    </div>
+                </div>
+                <!-- question-4 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            What is semantic tag?
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body text-secondary">
+                            The HTML semantics refers to the tags that provide meaning to an HTML page rather than just
+                            presentation. It makes HTML more comprehensible by better defining the different sections
+                            and layout of web pages.The core characteristic of a semantic element is that it clearly
+                            communicated its meaning to both the developer and the browser.
+                            Example of semantic tags: <code> article, nav, aside, section, header, footer.</code>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- joining section -->
+        <section class="container mt-5" id="Register">
+            <div class="card">
+                <div class="card-body bg-info d-flex flex-row justify-content-between p-5">
+                    <div>
+                        <h1 class="card-title text-white">Want to Expolre?</h1>
+                        <p class="card-text text-white">If you want to develope your skill this is the right place to
+                            get your resources.
+                            <br> and develope your skill for the upcoming challenges.
+                        </p>
+                    </div>
+                    <div>
+                        <button type="button" class="btn btn-light text-info fw-bold p-2 mt-4" data-toggle="modal"
+                            data-target="#exampleModalLong">
+                            Register Now
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal" id="exampleModalLong" tabindex="-1" role="dialog"
+                            aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        ...
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- modal end -->
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- trusted by companies -->
+        <section class="container mt-5">
+            <div class="text-center">
+                <h1 class="fw-semibold">Trusted by over 800+ companies</h1>
+            </div>
+            <div class="d-flex flex-row justify-content-around">
+                <div><img src="images/trusted-companies/coursera_logo_icon_170320.png" alt=""></div>
+                <div><img src="images/trusted-companies/fedex_logo_icon_171161.png" alt=""></div>
+                <div><img src="images/trusted-companies/indeed_logo_icon_145170.png" alt=""></div>
+                <div><img src="images/trusted-companies/udemy_official_logo_icon_168371.png" alt=""></div>
+            </div>
 
         </section>
-
-
     </main>
+    <!-- footer -->
+    <section class="container mt-5">
+        <footer class="bg-dark text-center text-white">
+            <!-- Grid container start -->
+            <div class="pt-5">
+                <h3>Tele School</h3>
+                <p class="text-light fs-6">Office 41, Zawaya Buildin, Ghala Muscat,
+                    <br>Sultanate of Oman <br> Privacy Ploicy | Terms of use
+                </p>
+            </div>
+
+            <div class="container p-4 pb-4">
+                <!-- Section: Social media start -->
+                <section class="mb-4">
+                    <!-- Facebook -->
+                    <i class="bi bi-facebook"></i>
+
+                    <!-- Twitter -->
+                    <i class="bi bi-twitter"></i>
+
+                    <!-- Linkedin -->
+                    <i class="bi bi-linkedin"></i>
+                    <!-- tiktok -->
+                    <i class="bi bi-tiktok"></i>
+                </section>
+                <!-- Section: Social media end-->
+            </div>
+            <!-- Grid container end -->
+        </footer>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
